@@ -1,3 +1,6 @@
+2007-10-06 Benny Malengier <benny.malengier@gramps-project.org> 
+	* src/Editors/_EditPerson.py: change tabs in spaces (I HATE THIS !!!)
+
 2007-10-07  Douglas Blank  <dblank@cs.brynmawr.edu>
 	* src/plugins/Calendar.py: various improvements, issue #931
 
